syntax = "proto3";

package pb;

// The Add service definition.
service Dbsvc {
    // Sums two integers.
    rpc Push (PushRequest) returns (PushReply) {}

    // Concatenates two strings
    rpc Concat (SelectRequest) returns (SelectReply) {}
}

// The sum request contains two parameters.
message PushRequest {
    repeated Post posts = 1;
}

// The sum response contains the result of the calculation.
message PushReply {
    string err = 1;
}

// The Concat request contains two parameters.
message SelectRequest {
    SpatialTemporalInterval interval = 1;
}

// The Concat response contains the result of the concatenation.
message SelectReply {
    repeated Post posts = 1;
    string err = 2;
}

message Post {
    string  ID = 1;
    string Shortcode = 2;
    string ImageURL = 3;
    bool IsVideo = 4;
    string Caption = 5;
    int64 CommentsCount = 6;
    int64 Timestamp = 7;
    int64 LikesCount = 8;
    bool IsAd = 9;
    string AuthorID = 10;
    string LocationID = 11;
    double Lat = 12;
    double Lon = 13;
}

message SpatialTemporalInterval {
    int64 MinTime = 1;
    int64 MaxTime = 2;
    double MinLat = 3;
    double MinLon = 4;
    double MaxLat = 5;
    double MaxLon = 6;
}